# pycycle-mcp

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
artifacts/coverage/: coverage.json
docs/: api.rst  conf.py  index.rst  quickstart.rst
docs/examples/: index.rst
docs/reference/: cli.rst  index.rst  session_manager.rst  stubs.rst  tools.rst
examples/: README.md
examples/client/: tool_discovery.py
examples/cpacs/: export_snapshot.py  session_lifecycle.py
examples/server/: http_launch_config.py
pycycle_mcp_server/: __init__.py  __main__.py  errors.py  fastmcp_server.py  main.py  runtime.py  schemas.py  session_manager.py  types.py  utils.py
pycycle_mcp_server/tools/: __init__.py  create_model.py  derivatives.py  execution.py  ping.py  sweep.py  variables.py
scripts/: check_coverage_thresholds.py  generate_example_docs.py
src/pycycle_mcp/: __main__.py  cpacs_adapter.py  errors.py  fastmcp_server.py  main.py  session_manager.py  types.py  utils.py
src/pycycle_mcp/tools/: __init__.py  create_model.py  derivatives.py  execution.py  ping.py  sweep.py  variables.py
tests/: conftest.py  test_cli.py  test_create_model.py  test_create_model_internal.py  test_docs_structure.py  test_examples_smoke.py  test_fastmcp_server.py  test_module_entrypoint.py  test_ovs_cpacs.py  test_packaging_metadata.py  test_runtime.py  test_session_manager.py  test_sweep_and_derivatives.py  test_tool_error_paths.py  test_utils.py  test_variables_and_execution.py
