[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycycle-mcp"
version = "0.1.0"
description = "An MCP around pyCycle/OpenMDAO cycle workflows"
authors = [
  { name = "The Design Research Collective", email = "ask-drc@cmu.edu" }
]
maintainers = [
  { name = "Mayank Dixit", email = "mayankd@andrew.cmu.edu" },
  { name = "Christopher McComb", email = "ccm@cmu.edu" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.0.0,<5.0.0",
  "fastmcp~=2.13.1",
  "pydantic>=2.6.0,<3.0.0",
  "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/cmudrc/pycycle-mcp"
Repository = "https://github.com/cmudrc/pycycle-mcp"
Issues = "https://github.com/cmudrc/pycycle-mcp/issues"
Documentation = "https://cmudrc.github.io/pycycle-mcp/"

[project.optional-dependencies]
full = [
  "openmdao>=3.27.0",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.11",
  "ruff>=0.6.0",
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0.0",
  "build>=1.2.0",
  "twine>=5.1.0",
  "pre-commit>=3.8.0",
]

[project.scripts]
pycycle-mcp = "pycycle_mcp.__main__:main"

[tool.ruff]
line-length = 120
extend-exclude = ["src/pycycle_mcp/cycles"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP047"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
exclude = ["^build/", "^src/pycycle_mcp/cycles/"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pycycle_mcp --cov-report=term-missing"
pythonpath = ["src"]
markers = [
  "examples_smoke: deterministic example smoke tests",
  "examples_full: extended deterministic example tests",
  "integration_real: optional tests requiring real pyCycle/OpenMDAO assets",
]

[tool.coverage.run]
omit = [
  "src/pycycle_mcp/cycles/*",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pycycle_mcp*"]
